Project

General

Profile

Actions

Bug #48843

closed

Get more parallel scrubs within osd_max_scrubs limits

Added by David Zafman over 3 years ago. Updated about 1 year ago.

Status:
Resolved
Priority:
High
Assignee:
David Zafman
Category:
-
Target version:
-
% Done:

100%

Source:
Tags:
backport_processed
Backport:
pacific, octopus, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When a reservation failure prevents a PG from scrubbing, other possible scrubbable PGs aren't tried.


Related issues 4 (1 open3 closed)

Related to RADOS - Bug #49868: RuntimeError: Exiting scrub checking -- not all pgs scrubbedNewDavid Zafman

Actions
Copied to RADOS - Backport #49774: pacific: Get more parallel scrubs within osd_max_scrubs limitsResolvedDavid ZafmanActions
Copied to RADOS - Backport #49775: nautilus: Get more parallel scrubs within osd_max_scrubs limitsRejectedDavid ZafmanActions
Copied to RADOS - Backport #49776: octopus: Get more parallel scrubs within osd_max_scrubs limitsRejectedDavid ZafmanActions
Actions #1

Updated by David Zafman over 3 years ago

  • Pull request ID set to 38853
Actions #2

Updated by David Zafman over 3 years ago

  • Tracker changed from Bug to Feature
Actions #3

Updated by David Zafman over 3 years ago

  • Backport set to pacific, octopus, nautilus
Actions #4

Updated by David Zafman about 3 years ago

  • Status changed from In Progress to Pending Backport
Actions #5

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49774: pacific: Get more parallel scrubs within osd_max_scrubs limits added
Actions #6

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49775: nautilus: Get more parallel scrubs within osd_max_scrubs limits added
Actions #7

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49776: octopus: Get more parallel scrubs within osd_max_scrubs limits added
Actions #8

Updated by Neha Ojha about 3 years ago

  • Related to Bug #49868: RuntimeError: Exiting scrub checking -- not all pgs scrubbed added
Actions #9

Updated by Backport Bot almost 2 years ago

  • Tags set to backport_processed
Actions #10

Updated by Konstantin Shalygin about 1 year ago

  • Tracker changed from Feature to Bug
  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
  • Regression set to No
  • Severity set to 3 - minor
Actions

Also available in: Atom PDF